[package]
name = "ckb-sdk"
version = "5.0.0"
authors = [
    "Linfeng Qian <thewawar@gmail.com>",
    "Nervos Core Dev <dev@nervos.org>",
]
edition = "2018"
license = "MIT"
description = "Rust SDK for CKB"
homepage = "https://github.com/nervosnetwork/ckb-sdk-rust"
repository = "https://github.com/nervosnetwork/ckb-sdk-rust"
resolver = "2"
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0.30"
anyhow = "1.0.63"
bech32 = "0.8.1"
derive-getters = "0.2.1"
log = "0.4.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies"] }
secp256k1 = { version = "0.30.0", features = ["recovery"] }
tokio-util = { version = "0.7.7", features = ["codec"] }
tokio = { version = "1", features = ["time"] }
bytes = "1"
futures = "0.3"
jsonrpc-core = "18"
lru = "0.7.1"
dashmap = "5.4"
dyn-clone = "1.0"
async-trait = "0.1"

ckb-types = "1.0.0"
ckb-dao-utils = "1.0.0"
ckb-traits = "1.0.0"
ckb-jsonrpc-types = "1.0.0"
ckb-hash = "1.0.0"
ckb-resource = "1.0.0"
ckb-system-scripts-v0_5_4 = { package="ckb-system-scripts", version="=0.5.4" }
ckb-system-scripts-v0_6_0 = { package="ckb-system-scripts", version="=0.6.0" }
ckb-crypto = "1.0.0"
ckb-script = "1.0.0"
bitflags = "1.3.2"
sha3 = "0.10.8"
enum-repr-derive = "0.2.0"
hex = "0.4"

# for feature test
rand = { version = "0.7.3", optional = true }
ckb-mock-tx-types = "1.0.0"
ckb-chain-spec = "1.0.0"

sparse-merkle-tree = { version = "0.6", optional = true }
async-iterator = "2.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.16", features = ["js"] }
web-time = "1.1.0"
tokio_with_wasm = { version = "0.8.2", features = ["time"] }

[features]
default = ["default-tls"]
default-tls = ["reqwest/default-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored"]
rustls-tls = ["reqwest/rustls-tls"]
test = ["rce", "rand", "default-tls"]
rce = ["sparse-merkle-tree"]

[dev-dependencies]
clap = { version = "4.4.18", features = ["derive"] }
httpmock = "0.6"
tempfile = "3.19.1"
