[package]
name = "ckb-sdk-jsonrpc-types"
version = "3.0.0"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2021"
license = "MIT"
description = "CKB common types for JSON serialization."
homepage = "https://github.com/nervosnetwork/ckb-sdk-rust"
repository = "https://github.com/nervosnetwork/ckb-sdk-rust"

[dependencies]
ckb-types = "0.111.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
faster-hex = "0.6"

[dev-dependencies]
proptest = "1.0"
regex = "1.1"
lazy_static = "1.3"
