[package]
name = "ckb-sdk-test-utils"
version = "1.0.0"
authors = ["Linfeng Qian <thewawar@gmail.com>", "Nervos Core Dev <dev@nervos.org>"]
edition = "2018"
license = "MIT"
description = "Unit test utilities for CKB Rust SDK "
homepage = "https://github.com/cryptape/ckb-sdk"
repository = "https://github.com/cryptape/ckb-sdk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
rand = "0.7.3"
ckb-types = "=0.103.0"
ckb-chain-spec = "=0.103.0"
ckb-hash = "=0.103.0"
ckb-script = "=0.103.0"
ckb-mock-tx-types = "0.3.0"
ckb-sdk = { version = "= 1.0.0", path = "../"}
